[package]
name = "earth-distance-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
getrandom = { version = "0.2", features = ["js"] }
gloo = "0.8.0"
quantities = "0.12.0"
rand = "0.8.5"
yew = { version="0.20", features=["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3.56", features = ["HtmlInputElement"] }
emojis = "0.6.0"