[package]
name = "earth-distance-game"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
getrandom = { version = "0.2", features = ["js"] }
gloo = "0.8.0"
quantities = "0.12.0"
rand = "0.8.5"
yew = { version="0.20", features=["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3.56", features = ["HtmlInputElement"] }
emojis = "0.6.0"

cities-client = { path = "../cities-client" }
cities-common = { path = "../cities-common" }
cities_api = { path = "../cities-api" }
serde = { version = "1.0", features = ["derive"] }

wasm-bindgen-futures = "0.4.37"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11", features = ["json"]}